welcome.lessons.welcome.loopfor.LoopFor.scala.code
var x = 0
while x < 4) {
    avance()
    x = x + 1
}
